refactor(api): remove grado entity leak and batch apoderado queries